--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="content">
-        <h1>Time Without You...</h1>
+        <h1>It's been...</h1>
         <div class="timer" id="timer">0d 0h 0m 0s</div>
         <div class="heartbroken">💔</div>
-        <div class="message">Since you left... nothing has been the same.</div>
+        <div class="message">Since you left... everything feels empty.</div>
     </div>
 
     <script src="script.js"></script>
