--- a/index.html
+++ b/index.html
@@ -4,14 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Since You Left...</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="content">
-        <h1>It's been...</h1>
-        <div class="timer" id="timer">0d 0h 0m 0s</div>
-        <div class="heartbroken">💔</div>
-        <div class="message">Since you left... everything feels empty.</div>
+    <div class="container">
+
+        <section class="one">
+            <div class="wrapper">
+                <div class="content">
+                    <h1>It's been...</h1>
+                    <div class="timer" id="timer">0d 0h 0m 0s</div>
+                    <div class="heartbroken">💔</div>
+                    <div class="message">Since you left... everything feels empty.</div>
+                </div>
+                <div class="bottom-content">wait a sec... what happens if I scroll</div>
+            </div>
+        </section>
+        
+        <section class="two">
+            <div class="wrapper">
+                <div class="content2">
+                    <h1 class="in">IN</h1>
+                    <div class="timer2" id="timer2">0d 0h 0m 0s</div>
+                    <div class="heart">❤️</div>
+                    <div class="message2">Counting down until you are in my arms again!</div>
+                </div>
+            </div>
+        </section>
+        
     </div>
 
     <script src="script.js"></script>
